// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webpack config Remove MiniCssExtractPlugin should not break if no Mini Css Extract configurations specified 1`] = `
Array [
  Object {
    "rules": Array [
      Object {
        "oneOf": Array [
          Object {
            "use": Array [
              "other-loader",
              Object {
                "loader": "other-loader",
              },
            ],
          },
        ],
      },
    ],
    "test": /\\\\\\.scss\\$/,
  },
  Object {},
]
`;

exports[`Webpack config Remove MiniCssExtractPlugin should remove Mini Css Extract from object rules and replace by style-loader 1`] = `
Array [
  Object {
    "rules": Array [
      Object {
        "oneOf": Array [
          Object {
            "use": Array [
              Object {
                "loader": "style-loader",
              },
              Object {
                "loader": "other-loader",
              },
            ],
          },
        ],
      },
    ],
    "test": /\\\\\\.scss\\$/,
  },
  Object {},
]
`;

exports[`Webpack config Remove MiniCssExtractPlugin should remove Mini Css Extract from string rules and replace by style-loader 1`] = `
Array [
  Object {
    "rules": Array [
      Object {
        "oneOf": Array [
          Object {
            "use": Array [
              Object {
                "loader": "style-loader",
              },
              "other-loader",
            ],
          },
        ],
      },
    ],
    "test": /\\\\\\.scss\\$/,
  },
  Object {},
]
`;
